Change markdown parser to kramdown
1.change the markdown parser to kramdown.
2.fix some bugs for using sidebar.

--- a/_posts/1900-01-05-them-what.md
+++ b/_posts/1900-01-05-them-what.md
@@ -150,7 +150,7 @@ lovely.
 
 ![What research revealed.](../images/elderly-2.gif "What research revealed.")
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## Caring For You. And Your Wellness.
 
@@ -794,7 +794,7 @@ computer terminal, opened for him. With an exasperated sense of accomplishment
 and a good deal of excitement surrounding all of the events that lie ahead, he
 stepped into the elevator and pressed 4.
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## An Evening of Unobstructed Voltage
 
@@ -1131,7 +1131,7 @@ Periodically, Ruby sends out its **garbage collector** to set these objects
 free. Every object is kept in your computer’s memory until the garbage collector
 gets rid of it.
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## An Excerpt from The Scarf Eaters
 
@@ -2232,7 +2232,7 @@ you’ll find that Ruby has lots of escape hatches and alley ways you can sneak
 into and hack code into. I’m also preparing you for metaprogramming, which, if
 you can smell that dragon, is ominously near.
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## Another Excerpt from The Scarf Eaters
 
