--- a/_posts/1900-01-06-downtown.md
+++ b/_posts/1900-01-06-downtown.md
@@ -464,7 +464,7 @@ indictment, my whole **<span class="caps">HERONESS</span>** is _absoflutely
 unimpeachable_, my whole **<span class="caps">APPROACH</span>** is _abassoonly
 unapricotable_, just ask Lester.”
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## The Inadvertent Meteor
 
@@ -705,7 +705,7 @@ you’ve stumbled across your first firefly, which has flown up in your face.
 Then, it becomes just _a little bobbing light_ which makes living in Ohio so
 much nicer.
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## Bread Riddles
 
@@ -1202,7 +1202,7 @@ Now use the little boomerang!
 
 For crying out loud!! Our sample rabbit died!!
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## The Shoes Which Lies Are Made Of
 
@@ -1738,7 +1738,7 @@ the aisle?”
 speaking close and hushed to Fox Tall, “and all he has, instead of hands, are
 sucker cups.”
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## More From The Chilling Ongoing Preview of The Scarf Eaters
 
@@ -2284,7 +2284,7 @@ legs. “You don’t need to raise your voice above a whisper. These long skinny
 clouds are usually just a mumble or a sigh. They may not even make it all the
 way.”
 
-<div class=sidebar><aside>
+<div class="sidebar"><aside>
 {% capture sidebar %}
 ## Steaks ‘n’ Slides
 
